data/derived/sp14/progs/unify/prog1241.ml.out
Characters 149-172:
  else (x,hd)::(argmaker x tl)
       ^^^^^^^^^^^^^^^^^^^^^^^
Error: This expression has type 'a list
       but an expression was expected of type 'b * 'c
